--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,19 @@ author: Ferran Muiños
 
 email: ferran.muinos@irbbarcelona.org
 
-description: > # this means to ignore newlines until "baseurl:"
+description: > 
+# this means to ignore newlines until "baseurl:"
   Features content for the course of Elements of Mathematics (MAT).
 
-# social links
-twitter_username: fmuinos  # DO NOT include the @ character, or else the build will fail!
-github_username:  koszulordie  # DO NOT include the @ character, or else the build will fail!
+# social media links
 
-show_excerpts: true # set to false to remove excerpts on the homepage
+twitter_username: fmuinos  
+# DO NOT include the @ character, or else the build will fail!
+
+github_username:  koszulordie  
+# DO NOT include the @ character, or else the build will fail!
+
+show_excerpts: true 
+# set to false to remove excerpts on the homepage
 
 theme: jekyll-theme-cayman
