--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,15 @@
-title: Elements of Mathematics
+theme: jekyll-theme-cayman
 
 author: Ferran Muiños
 
 email: ferran.muinos@irbbarcelona.org
 
-description: > 
-# this means to ignore newlines until "baseurl:"
-  Features content for the course of Elements of Mathematics (MAT).
+description: > # this means to ignore newlines until "baseurl:"
+  Elements of Mathematics
 
-# social media links
+twitter_username: fmuinos # DO NOT include the @ character, or else the build will fail!
 
-twitter_username: fmuinos  
-# DO NOT include the @ character, or else the build will fail!
+github_username: koszulordie # DO NOT include the @ character, or else the build will fail!
 
-github_username:  koszulordie  
-# DO NOT include the @ character, or else the build will fail!
-
-show_excerpts: true 
-# set to false to remove excerpts on the homepage
-
-theme: jekyll-theme-cayman
+show_excerpts: true # set to false to remove excerpts on the homepage
 
