--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
-theme: jekyll-theme-cayman
-
 author: Ferran Muiños
-
 email: ferran.muinos@irbbarcelona.org
-
-description: > # this means to ignore newlines until "baseurl:"
-  Elements of Mathematics
-
-twitter_username: fmuinos # DO NOT include the @ character, or else the build will fail!
-
-github_username: koszulordie # DO NOT include the @ character, or else the build will fail!
-
-show_excerpts: true # set to false to remove excerpts on the homepage
-
+description: "mat course"
+twitter_username: fmuinos
+github_username: koszulordie
+show_excerpts: true
+future: true
+# Build settings
+theme: jekyll-theme-cayman
+# theme: Minima
+show_downloads: "true"
+collections:
+  tags:
+    output: true
+    permalink: tags/:path/
