CHANGE: define post url by using a newly defined baseurl in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ author: Ferran Muiños
 email: ferran.muinos@irbbarcelona.org
 description: "mat course"
 twitter_username: fmuinos
+baseurl: /mat
 github_username: koszulordie
 show_excerpts: true
 future: true
